Update Heart Disease Predictor.ipynb

--- a/Heart Disease Predictor.ipynb
+++ b/Heart Disease Predictor.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "heart = pd.read_csv('/Users/anya/Downloads/heart.csv')"
+    "heart = pd.read_csv('heart.csv')"
    ]
   },
   {
